--- a/src/app/clientes/personal-data/document/document.component.css
+++ b/src/app/clientes/personal-data/document/document.component.css
@@ -13,9 +13,9 @@
 .field {
     border-width: 1px;
     border-style: solid;
-    border-color: var(--input-foreground);
-    background: var(--input);
-    color: var(--input-foreground);
+    border-color: var(--foreground-inputs-odds);
+    background: var(--inputs-odds);
+    color: var(--foreground-inputs-odds);
     padding: 5px 10px;
     border-radius: 5px;
     opacity: 0.4;
