--- a/src/app/clientes/personal-data/personal-data.component.css
+++ b/src/app/clientes/personal-data/personal-data.component.css
@@ -26,7 +26,7 @@
 }
 
 .wb-accordion-item {
-    background-color: var(--league);
+    background-color: var(--sidebars);
 }
 
 .wb-accordion-item .wb-accordion-title {
