--- a/src/app/clientes/personal-data/phone/phone.component.css
+++ b/src/app/clientes/personal-data/phone/phone.component.css
@@ -13,9 +13,9 @@
 .field {
     border-width: 1px;
     border-style: solid;
-    border-color: var(--input-foreground);
-    background: var(--input);
-    color: var(--input-foreground);
+    border-color: var(--foreground-inputs-odds);
+    background: var(--inputs-odds);
+    color: var(--foreground-inputs-odds);
     padding: 5px 10px;
     border-radius: 5px;
     width: 100%;
@@ -33,7 +33,7 @@
 }
 
 .field.editing {
-    opacity: 1;
+    opacity: .4;
 }
 
 .field .input {
@@ -51,7 +51,7 @@
 .field .input input {
     border: 0;
     background: transparent;
-    color: var(--input-foreground);
+    color: var(--foreground-inputs-odds);
     width: 100%;
 }
 
