--- a/src/app/shared/layout/modals/register-v3-modal/register-v3-modal.component.scss
+++ b/src/app/shared/layout/modals/register-v3-modal/register-v3-modal.component.scss
@@ -235,7 +235,7 @@ button {
     border-radius: 4px;
     border: 0.1px solid rgba(var(--foreground-inputs-odds-rgb), 0.5);
     color: rgba(var(--foreground-inputs-odds-rgb), 0.5);
-    background: var(--input);
+    background: var(--inputs-odds);
     max-height: 44px;
     gap: 4px;
 }
@@ -590,7 +590,7 @@ a.link-termos-politica {
     border-radius: 4px;
     border: 0.1px solid rgba(var(--foreground-inputs-odds-rgb), 0.5);
     color: rgba(var(--foreground-inputs-odds-rgb), 0.5);
-    background: var(--input);
+    background: var(--inputs-odds);
     max-height: 44px;
     gap: 4px;
     justify-content: center;
