--- a/src/app/shared/layout/modals/register-v3-modal/register-v3-modal.component.scss
+++ b/src/app/shared/layout/modals/register-v3-modal/register-v3-modal.component.scss
@@ -673,8 +673,8 @@ a.link-termos-politica {
         display: flex;
         flex-direction: row;
         gap: 0;
-        min-height: 609px;
-        height: auto;
+        height: 750px;
+       
     }
 
     .container {
@@ -683,7 +683,7 @@ a.link-termos-politica {
     }
 
     .banner {
-        width: 400px;
+        width: 480px;
         height: auto;
 
         &__desktop {
@@ -712,6 +712,10 @@ a.link-termos-politica {
     ::ng-deep .tooltip-password {
         --bs-tooltip-max-width: 390px !important;
         width: 100%;
+    }
+
+    .modal-cadastro-cliente .modal-dialog {
+        max-width: 930px !important;
     }
 }
 
