--- a/src/styles.css
+++ b/src/styles.css
@@ -1666,6 +1666,10 @@ input[type=number]::-webkit-outer-spin-button {
     max-width: 750px;
 }
 
+.modal-950 .modal-dialog {
+    max-width: 950px;
+}
+
 .btn.disabled, .btn:disabled {
     opacity: 0.3;
 }
