--- a/src/app/casino/gameview/gameview.component.html
+++ b/src/app/casino/gameview/gameview.component.html
@@ -47,20 +47,17 @@
             </div>
         </div>
         <ng-container>
-            <div class="game-view-mobile" [ngClass]="{ 'in-game': isLoggedIn || gameMode !== 'REAL' }" *ngIf="isLoggedIn || gameMode != 'REAL'" >
-                <div class="game-frame" >
-                    <ng-container *ngIf="mobileScreen">
-                        <iframe *ngIf="gameUrl != ''" #iframeElement [src]="gameUrl"></iframe>
-                        <iframe *ngIf="htmlGame != ''" #iframe [srcdoc]="htmlGame" (load)="onIframeLoad(iframe)"></iframe>
-                    </ng-container>
-                    <ng-container *ngIf="!mobileScreen">
-                        <iframe *ngIf="gameUrl != ''"  [src]="gameUrl" allow="fullscreen"></iframe>
-                        <iframe *ngIf="htmlGame != ''" #iframe [srcdoc]="htmlGame" (load)="onIframeLoad(iframe)" allow="fullscreen"></iframe>
-                    </ng-container>
+            <div
+                class="game-view-mobile"
+                [ngClass]="{ 'in-game': isLoggedIn || gameMode !== 'REAL' }"
+                *ngIf="isLoggedIn || gameMode != 'REAL'"
+            >
+                <div class="game-frame" #iframeContainer>
+                   
                 </div>
             </div>
 
-            <div *ngIf="!isLoggedIn && gameMode == 'REAL'" class="game-frame">
+            <div *ngIf="!isLoggedIn && gameMode == 'REAL'">
                 <div class="overlay overlay--unauthorized">
                     <div class="card-small">
                         <div class="card-content">
@@ -158,14 +155,15 @@
         </div>
         <ng-container>
             <div *ngIf="isLoggedIn || gameMode != 'REAL'" class="game-frame in-game" [ngClass]="{ 'is-tablet': isTablet, desktopIsloggedIn: isLoggedIn } " >
-                <ng-container *ngIf="mobileScreen">
+                <div class="game-frame" #iframeContainer></div> 
+                <!-- <ng-container *ngIf="mobileScreen">
                     <iframe *ngIf="gameUrl!=''"  [src]="gameUrl"></iframe>
                     <iframe *ngIf="htmlGame != ''" #iframe [srcdoc]="htmlGame" (load)="onIframeLoad(iframe)"></iframe>
                 </ng-container>
                 <ng-container *ngIf="!mobileScreen">
                     <iframe *ngIf="gameUrl!=''"  [src]="gameUrl" allowfullscreen></iframe>
                     <iframe *ngIf="htmlGame != ''" #iframe [srcdoc]="htmlGame" (load)="onIframeLoad(iframe)" allowfullscreen></iframe>
-                </ng-container>
+                </ng-container> -->
             </div>
 
             <div *ngIf="!isLoggedIn && gameMode == 'REAL'" class="game-frame" [ngClass]="{ 'is-tablet': isTablet }">
