--- a/src/app/casino/gameview/gameview.component.html
+++ b/src/app/casino/gameview/gameview.component.html
@@ -50,7 +50,7 @@
             <div class="game-view-mobile" [ngClass]="{ 'in-game': isLoggedIn || gameMode !== 'REAL' }" *ngIf="isLoggedIn || gameMode != 'REAL'" >
                 <div class="game-frame" >
                     <ng-container *ngIf="mobileScreen">
-                        <iframe #iframeElement *ngIf="gameUrl!=''"  [src]="gameUrl"></iframe>
+                        <iframe *ngIf="gameUrl!=''"  [src]="gameUrl"></iframe>
                         <iframe *ngIf="htmlGame != ''" #iframe [srcdoc]="htmlGame" (load)="onIframeLoad(iframe)"></iframe>
                     </ng-container>
                     <ng-container *ngIf="!mobileScreen">
