fix: resolve bug in screen orientation

--- a/src/app/casino/gameview/gameview.component.css
+++ b/src/app/casino/gameview/gameview.component.css
@@ -100,6 +100,7 @@ iframe{
 
 .header-game-view .buttons-game-view {
     justify-content: right;
+    gap: 10px;
 }
 
 .game-name span {
@@ -220,6 +221,35 @@ iframe{
 
 #expanded-btn-game-opened, #expanded-btn-game-closed, #close-btn-game {
     display: flex;
+}
+
+#deposit-btn{
+    display: flex;
+    max-height: 23px;
+    background-color: var(--highlight);
+    color: var(--foreground-highlight);
+    width: 82px;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    border-radius: 2px;
+    font-size: 12px;
+}
+
+.btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    border-radius: 5px;
+    cursor: pointer;
+    width: 170px;
+    height: 40px;
+}
+
+.btn p {
+    padding: 0;
+    margin: 0;
 }
 
 @media only screen and (max-width: 1024px) {
@@ -497,17 +527,6 @@ iframe{
         margin-top: 20px;
     }
 
-    .btn {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding: 10px;
-        border-radius: 5px;
-        cursor: pointer;
-        width: 170px;
-        height: 40px;
-    }
-
     .register-btn {
         border: 1px solid var(--highlight);
         background: var(--highlight);
@@ -616,7 +635,7 @@ iframe{
 
     .game-frame {
         width: 100%;
-        margin: 0 20px;
+        margin: 0;
         margin-bottom: 30px;
         height: 780px;
     }
@@ -705,6 +724,7 @@ iframe{
 
     .header-game-view .buttons-game-view {
         justify-content: right;
+        gap: 10px;
     }
 
     .game-name span {
