--- a/src/app/casino/gameview/gameview.component.html
+++ b/src/app/casino/gameview/gameview.component.html
@@ -50,7 +50,7 @@
             <div class="game-view-mobile" [ngClass]="{ 'in-game': isLoggedIn || gameMode !== 'REAL' }" *ngIf="isLoggedIn || gameMode != 'REAL'" >
                 <div class="game-frame" >
                     <ng-container *ngIf="mobileScreen">
-                        <iframe *ngIf="gameUrl!=''"  [src]="gameUrl"></iframe>
+                        <iframe *ngIf="gameUrl!=''"  [src]="gameUrl" allow="fullscreen"></iframe>
                         <iframe *ngIf="htmlGame != ''" #iframe [srcdoc]="htmlGame" (load)="onIframeLoad(iframe)"></iframe>
                     </ng-container>
                     <ng-container *ngIf="!mobileScreen">
@@ -112,7 +112,7 @@
     </div>
 
     <div class="game-view"
-        *ngIf="isDesktop || isTablet || isHorizontalMobile"
+        *ngIf="!isMobile && (isDesktop || isTablet || isHorizontalMobile)"
         [ngClass]="{ 'in-game': isLoggedIn || gameMode !== 'REAL', 'is-tablet': isTablet }"
     >
         <div class="header-game-view" [ngClass]="{ 'in-game': isLoggedIn || gameMode !== 'REAL', 'is-tablet': isTablet }">
