feat: prepare build

--- a/src/assets/styles/weebet/_colors.scss
+++ b/src/assets/styles/weebet/_colors.scss
@@ -1,8 +1,8 @@
 :root {
     --primary: #004e42;
-    --secondary: #FFFFFF;
+    --secondary: #ffffff;
 
-    --background: #FFFFFF;
+    --background: #ffffff;
     --foreground: #101820;
     --separator: #e5e5e5;
 }
