--- a/src/assets/styles/naipe/_colors.scss
+++ b/src/assets/styles/naipe/_colors.scss
@@ -1,8 +1,8 @@
 :root {
-    --primary: #C71F2D;
-    --secondary: #FFFFFF;
+    --primary: #c71f2d;
+    --secondary: #ffffff;
 
-    --background: #FFFFFF;
+    --background: #ffffff;
     --foreground: #101820;
     --separator: #e5e5e5;
 }
